# OpenGL_jam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  main.cpp  makefile
include/: Camera.hpp  DirLightObject.hpp  LightObject.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelObject.hpp  Plane.hpp  PointLightObject.hpp  RenderManager.hpp  Shader.hpp  SpotLightObject.hpp  Texture.hpp  TextureArray.hpp  Transform.hpp  Vertex.hpp
include/glad/: glad.h
models/NewPlaneObj/: plane.mtl
models/mb/: mb.mtl
shaders/: frag.glsl  lightFrag.glsl  skyboxFrag.glsl  skyboxVertex.glsl  vertex.glsl
src/: Camera.cpp  DirLightObject.cpp  LightObject.cpp  Mesh.cpp  Model.cpp  ModelObject.cpp  Plane.cpp  PointLightObject.cpp  RenderManager.cpp  Shader.cpp  SpotLightObject.cpp  Texture.cpp  TextureArray.cpp  Transform.cpp  glad.c
src/structs/: Texture.cpp  Vector.cpp
